--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,25 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Quicksand', sans-serif;
+    /* font-family: 'Abril Fatface', cursive;
+  font-family: 'Lobster', cursive;
+  font-family: 'Quicksand', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: salmon;
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  font-family: 'Lobster', cursive;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 code {
