Algunos estilos de la nav

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
-  background-color: salmon;
+  /* background-color: black; */
+  /* padding: 30px 80px; */
 
 }
 
