--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -1,8 +1,12 @@
 .Landing-wrap {
-    background-image: url("https://images.unsplash.com/photo-1596662951482-0c4ba74a6df6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=933&q=80");
+    background-image: url("https://images.unsplash.com/photo-1582196016295-f8c8bd4b3a99?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
   }
+
+.Landing-content {
+  padding: 80px 80px;
+}
