--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -5,8 +5,18 @@
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
+    text-align: center;
   }
 
 .Landing-content {
   padding: 80px 80px;
+}
+
+.Landing-content h1 {
+  margin-top: 200px;
+  font-size: 8rem;
+}
+
+.Landing-content h4 {
+  font-size: 3rem;
 }
