--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -13,10 +13,16 @@
 }
 
 .Landing-content h1 {
-  margin-top: 200px;
+  margin-top: 170px;
   font-size: 8rem;
 }
 
 .Landing-content h4 {
   font-size: 3rem;
 }
+
+.Landing-content p {
+  margin-top: 20px;
+  padding: 10px;
+}
+
